--- a/index.html
+++ b/index.html
@@ -253,17 +253,15 @@
             <ul class="content flex flex-col justify-center gap-18 py-12 bg-gray-light">
                 <li class="flex flex-col justify-center gap-4 px-12 fade-in md:px-16">
                     <div class="flex flex-col justify-between md:items-center md:flex-row">
-                        <h3 class="h-md font-bold capitalize">Content Creator</h3>
+                        <h3 class="h-md font-bold capitalize">Founder</h3>
                         <h3 class="h-md font-bold capitalize">May 2025 - present</h3>
                     </div>
-                    <h5 class="h-xsm font-bold uppercase">youtube platform</h5>
+                    <h5 class="h-xsm font-bold uppercase">tech step</h5>
                     <ul class="py-2">
                         <li class="font-light text-base text-secondary md:text-lg lg:text-2xl"><span
-                                class="inline-block size-1 rounded-full bg-secondary"></span> Created clear,
-                            step-by-step tutorials in software development, tailored for beginners.</li>
+                                class="inline-block size-1 rounded-full bg-secondary"></span> Developed an educational platform in software development, focused on project-based, hands-on learning to acquire practical skills.</li>
                         <li class="font-light text-base text-secondary md:text-lg lg:text-2xl"><span
-                                class="inline-block size-1 rounded-full bg-secondary"></span> Focused on real-world
-                            applications to enhance practical and problem-solving skills.</li>
+                                class="inline-block size-1 rounded-full bg-secondary"></span> Prepared structured, step-by-step lessons to enhance applied thinking and problem-solving skills.</li>
                     </ul>
                 </li>
                 <li class="px-12 md:px-16">
@@ -407,5 +405,6 @@
 
     <script src="./script/script.js"></script>
 </body>
+
 
 </html>
